# PasswordGuardian

./: .gitignore  Cargo.toml  README.md  passwords.csv
src/: main.rs
src/components/: console.rs  cryptography.rs  database.rs  error.rs  export.rs  logindata.rs  metadata.rs  mod.rs
